other cars - no collision detect

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <div>
     <h2>Road fighter 2D</h2>
 </div>
-<canvas id="gameBoard" width="350" height="500"></canvas>
+<canvas id="gameBoard" width="350" height="800"></canvas>
 </body>
 <script src="script/engine.js"></script>
 <script src="script/board.js"></script>
 <script src="script/car.js"></script>
-<script src="script/steering.js"></script>
+<script src="script/controls.js"></script>
 <script src="script/game.js"></script>
 </html>
