--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Road Fighter</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body onload="main();">
 <div>
-    <h2>Road fighter 2D</h2>
+    <h2>Road fighter </h2>
 </div>
+
 <canvas id="gameBoard" width="350" height="800"></canvas>
+<button id="again" onclick="location.reload()">Again!</button>
 </body>
 <script src="script/engine.js"></script>
 <script src="script/board.js"></script>
