--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body onload="main();">
-<div>
-    <h2>Road fighter </h2>
-</div>
-
-<canvas id="gameBoard" width="350" height="800"></canvas>
+<canvas id="gameBoard" width="1450" height="920"></canvas>
 <button id="again" onclick="location.reload()">Again!</button>
 </body>
 <script src="script/engine.js"></script>
@@ -18,4 +14,5 @@
 <script src="script/car.js"></script>
 <script src="script/controls.js"></script>
 <script src="script/game.js"></script>
+<script src="script/board-objects.js"></script>
 </html>
